--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "scripts": {
     "preinstall": "git submodule init && git submodule update",
+    "make:program": "ts-node -T src/@core/scripts/makeProgram/index.ts",
     "build:less": "ts-node -T src/@core/scripts/compile-less.ts",
-    "watch:less": "onchange -f change -d 1000 'src/styles/less' 'src/styles/theme.ts' -- run-s build:less",
     "watch": "run-p watch:*",
+    "watch:less": "onchange -f change -d 1000 'src/styles/less' 'src/styles/theme.ts' -- run-s build:less",
     "dev": "npm run build:less && run-p start:alpha watch",
     "build": "tsc && vite build --mode production",
     "build:alpha": "tsc && vite build --mode alpha",
