Fix build error

--- a/package.json
+++ b/package.json
@@ -12,22 +12,20 @@
     "build:alpha": "tsc && vite build --mode alpha",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write --cache .",
-    "preview": "vite preview",
-    "start:alpha": "vite --mode alpha",
-    "start:beta": "vite --mode beta"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "@axframe/contextmenu": "^0.3.5",
     "@axframe/datagrid": "^0.6.12",
     "@axframe/icon": "^0.1.15",
+    "@ctrl/tinycolor": "^4.0.2",
     "@emotion/css": "^11.10.0",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "antd": "^5.9.4",
     "axios": "^1.5.1",
     "chart.js": "^4.4.0",
-    "color": "^4.2.3",
     "fs-extra": "^11.1.1",
     "idb-keyval": "^6.2.1",
     "less": "^4.2.0",
@@ -46,7 +44,6 @@
     "zustand": "^4.4.2"
   },
   "devDependencies": {
-    "@types/color": "^3.0.4",
     "@types/fs-extra": "^11.0.2",
     "@types/jest": "^29.5.5",
     "@types/less": "^3.0.4",
