--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-css-theme-switcher": "^0.3.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.11",
     "react-router-dom": "^6.16.0",
     "react-sortablejs": "^6.1.4",
     "recharts": "^2.8.0",
